Corrected the z-index for navigation overlay and header slideshow button

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -8,7 +8,7 @@
     padding: 1rem 3rem;
     position: sticky;
     top: 0;
-    z-index: 1;
+    z-index: 5;
 }
 
 /* Navbar logo positioning. */
