--- a/src/container/Header/Header.css
+++ b/src/container/Header/Header.css
@@ -132,7 +132,7 @@
   top: 390px; /* Adjust top position as needed */
   left: 50%; /* Center horizontally */
   transform: translateX(-50%);
-  z-index: 500; /* Make sure it's in front of other elements */
+  z-index: 1; /* Make sure it's in front of other elements */
   pointer-events:all;
   cursor: pointer;
 }
